--- a/Day1/index.html
+++ b/Day1/index.html
@@ -9,20 +9,72 @@
 </head>
 
 <body>
-    <h1>Ben Goldstone</h1>
-    <p>
-        <em><a href="http://www.muhlenberg.edu" target="_blank" rel="noopener noreferrer">Muhlenberg College</a>
-            Learning Assistant</em>
-    </p>
+    <table>
+        <tbody>
+            <tr>
+                <td><img src="./me.jpg" alt="A picture of Me" width="250" style="padding-right:20px"></td>
+                <td>
+                    <h1>Ben Goldstone</h1>
+                    <p>
+                        <em><a href="http://www.muhlenberg.edu" target="_blank" rel="noopener noreferrer">Muhlenberg
+                                College</a>
+                            Learning Assistant</em>
+                    </p>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
     <hr>
-    <img src="https://www.muhlenberg.edu/media/contentassets/images/newscenter/faculty/jorgewhyistudy.jpg"
-        alt="picture of jorge silveyra" width="25%">
-    <h2 style="margin: 0px;">Professors at Muhlenberg College</h2>
-    <ol style="margin: 0px;" type="I">
-        <li>Jorge Silveyra</li>
-        <li>Joseph Helsing</li>
-        <li>Hamed Yaghoobian</li>
-    </ol>
+    <div>
+        <img src="https://www.muhlenberg.edu/media/contentassets/images/newscenter/faculty/jorgewhyistudy.jpg"
+            alt="picture of jorge silveyra" width="25%" style="margin-left: auto; margin-right: auto;">
+        <h2>Professors at Muhlenberg College</h2>
+        <ol type="I">
+            <li>Jorge Silveyra</li>
+            <li>Joseph Helsing</li>
+            <li>Hamed Yaghoobian</li>
+        </ol>
+    </div>
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Eli</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>Ben</td>
+                <td>20</td>
+            </tr>
+        </tbody>
+    </table>
+    <h3 style="margin-bottom: 5px;">My Skills</h3>
+    <table style="font-weight: bold; margin-top: 0px;">
+        <tr>
+            <td>Go</td>
+            <td>⭐⭐☆☆☆</td>
+        </tr>
+        <tr>
+            <td>Java</td>
+            <td>⭐⭐⭐☆☆</td>
+        </tr>
+        <tr>
+            <td>Javascript</td>
+            <td>⭐⭐⭐⭐☆</td>
+        </tr>
+        <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+    </table>
+    <hr>
+    <iframe src="./contact.html" frameborder="0" width="100%" height="925px" style="border:none;"></iframe>
 </body>
 
 </html>
