--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Ben Goldstone's Personal Website</title>
 </head>
 
-<body>
+<body background="#a41e34">
     <table>
         <tbody>
             <tr>
