--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Ben Goldstone's Personal Website</title>
 </head>
 
-<body background="#a41e34">
+<body style="background-color: #a41e34;">
     <table>
         <tbody>
             <tr>
