--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #a41e34;">
+<html lang="en" style="background-color: #a41e34; color:white;">
 
 <head>
     <meta charset="UTF-8">
