added text color

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #a41e34; color:white;">
+<html lang="en" style="background-color: #a41e34;">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <title>Ben Goldstone's Personal Website</title>
 </head>
 
-<body>
+<body style="color:white;">
     <table>
         <tbody>
             <tr>
