changed contact.html font color

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Contact Me</title>
 </head>
 
-<body>
+<body style="color:white;">
     <div>
         <h1>Contact Me</h1>
         <p><strong>Email:</strong><a href="mailto:jorgesilveyra@muhlenberg.edu">jorgesilveyra@muhlenberg.edu</a></p>
