font color fix?

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
     <title>Contact Me</title>
 </head>
 
-<body style="color:white;">
-    <div>
+<body>
+    <div style="color:white;">
         <h1>Contact Me</h1>
         <p><strong>Email:</strong><a href="mailto:jorgesilveyra@muhlenberg.edu">jorgesilveyra@muhlenberg.edu</a></p>
         <p><strong>Phone:</strong> <a href="tel:+1484-664-3100">(484) 664-3100</a></p>
