--- a/html-with-css/index.html
+++ b/html-with-css/index.html
@@ -1,81 +1,83 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #a41e34;">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Ben Goldstone's Personal Website</title>
 </head>
 
-<body style="color:white;">
-    <table>
-        <tbody>
-            <tr>
-                <td><img src="./me.jpg" alt="A picture of Me" width="250" style="padding-right:20px"></td>
-                <td>
-                    <h1>Ben Goldstone</h1>
-                    <p>
-                        <em><a href="http://www.muhlenberg.edu" target="_blank" rel="noopener noreferrer">Muhlenberg
-                                College</a>
-                            Learning Assistant</em>
-                    </p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<body>
+    <div id="body">
+        <table>
+            <tbody>
+                <tr>
+                    <td><img src="./me.jpg" alt="A picture of Me" width="250"></td>
+                    <td>
+                        <h1>Ben Goldstone</h1>
+                        <p>
+                            <em><a href="http://www.muhlenberg.edu" target="_blank" rel="noopener noreferrer">Muhlenberg
+                                    College</a>
+                                Learning Assistant</em>
+                        </p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
-    <hr>
-    <div>
-        <h2>Professors at Muhlenberg College</h2>
-        <img src="https://www.muhlenberg.edu/media/contentassets/images/newscenter/faculty/jorgewhyistudy.jpg"
-            alt="picture of jorge silveyra" width="25%" style="margin-left: auto; margin-right: auto;">
-        <ol type="I">
-            <li>Jorge Silveyra</li>
-            <li>Joseph Helsing</li>
-            <li>Hamed Yaghoobian</li>
-        </ol>
+        <hr>
+        <div>
+            <h2>Professors at Muhlenberg College</h2>
+            <img src="https://www.muhlenberg.edu/media/contentassets/images/newscenter/faculty/jorgewhyistudy.jpg"
+                alt="picture of jorge silveyra" width="25%">
+            <ol type="I">
+                <li>Jorge Silveyra</li>
+                <li>Joseph Helsing</li>
+                <li>Hamed Yaghoobian</li>
+            </ol>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Eli</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>Ben</td>
+                    <td>20</td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>My Skills</h3>
+        <table>
+            <tr>
+                <td>Go</td>
+                <td>⭐⭐☆☆☆</td>
+            </tr>
+            <tr>
+                <td>Java</td>
+                <td>⭐⭐⭐☆☆</td>
+            </tr>
+            <tr>
+                <td>Javascript</td>
+                <td>⭐⭐⭐⭐☆</td>
+            </tr>
+            <tr>
+                <td>Python</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+        </table>
+        <hr>
+        <iframe src="./contact.html" frameborder="0" width="100%" height="1000px"></iframe>
     </div>
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Age</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Eli</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>Ben</td>
-                <td>20</td>
-            </tr>
-        </tbody>
-    </table>
-    <h3 style="margin-bottom: 5px;">My Skills</h3>
-    <table style="font-weight: bold; margin-top: 0px;">
-        <tr>
-            <td>Go</td>
-            <td>⭐⭐☆☆☆</td>
-        </tr>
-        <tr>
-            <td>Java</td>
-            <td>⭐⭐⭐☆☆</td>
-        </tr>
-        <tr>
-            <td>Javascript</td>
-            <td>⭐⭐⭐⭐☆</td>
-        </tr>
-        <tr>
-            <td>Python</td>
-            <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-    </table>
-    <hr>
-    <iframe src="./contact.html" frameborder="0" width="100%" height="925px" style="border:none;"></iframe>
 </body>
 
 </html>
