--- a/03 CSS -Spinach Fansite/index.html
+++ b/03 CSS -Spinach Fansite/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Spinach Fansite</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="https://muhlenberg.edu/media/muhlenbergedu/siteassets/images/favicons/favicon-32x32.png"
+    type="image/x-icon">
 </head>
 
 <body>
