--- a/04/index.html
+++ b/04/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/hand-wave.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/hand-wave.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
     <title>Ben Goldstone</title>
-</head>
+  </head>
 
-<body>
-    <h1>Ben Goldstone</h1>
-    <h2>A Programmer</h2>
-</body>
+  <body>
+    <div class="box top heading box-mb">
+      <h1>Ben Goldstone</h1>
 
+      <h2>A Programmer</h2>
+    </div>
+    <div class="box middle box-mb"></div>
+    <div class="box bottom"></div>
+  </body>
 </html>
