91922 in-class code

--- a/04/index.html
+++ b/04/index.html
@@ -10,12 +10,18 @@
   </head>
 
   <body>
-    <div class="box top heading box-mb">
+    <img class="cloud" src="./images/cloud.png" alt="cloud" />
+    <div class="header">
       <h1>Ben Goldstone</h1>
-
       <h2>A Programmer</h2>
     </div>
+    <!-- <div class="box top heading box-mb"></div>
     <div class="box middle box-mb"></div>
-    <div class="box bottom"></div>
+    <div class="box bottom"></div> -->
+
+    <div>
+      <img class="bottom-cloud" src="./images/cloud.png" alt="cloud" />
+      <img class="mountain" src="./images/mountains.png" alt="mountains" />
+    </div>
   </body>
 </html>
