--- a/04/index.html
+++ b/04/index.html
@@ -10,18 +10,41 @@
   </head>
 
   <body>
-    <img class="cloud" src="./images/cloud.png" alt="cloud" />
-    <div class="header">
-      <h1>Ben Goldstone</h1>
-      <h2>A Programmer</h2>
-    </div>
-    <!-- <div class="box top heading box-mb"></div>
-    <div class="box middle box-mb"></div>
-    <div class="box bottom"></div> -->
+    <!-- Section 1 -->
+    <div id="section-1">
+      <img class="cloud" src="./images/cloud.png" alt="cloud" />
+      <div class="header">
+        <h1>Ben Goldstone</h1>
+        <h2>A Programmer</h2>
+      </div>
+      <!-- <div class="box top heading box-mb"></div>
+      <div class="box middle box-mb"></div>
+      <div class="box bottom"></div> -->
 
-    <div>
-      <img class="bottom-cloud" src="./images/cloud.png" alt="cloud" />
-      <img class="mountain" src="./images/mountains.png" alt="mountains" />
+      <div>
+        <img class="bottom-cloud" src="./images/cloud.png" alt="cloud" />
+        <img class="mountain" src="./images/mountains.png" alt="mountains" />
+      </div>
+    </div>
+    <!-- Section 2 -->
+    <div id="section-2">
+      <h3 class="section-2-header">My Skills</h3>
+      <div class="skills">
+        <h2 class="skills-text">Go&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+        <h2 class="skills-text">★★☆☆☆</h2>
+      </div>
+      <div class="skills">
+        <h2 class="skills-text">Java&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+        <h2 class="skills-text">★★★☆☆</h2>
+      </div>
+      <div class="skills">
+        <h2 class="skills-text">JS ES6&nbsp;&nbsp;</h2>
+        <h2 class="skills-text">★★★★☆</h2>
+      </div>
+      <div class="skills">
+        <h2 class="skills-text">Python&nbsp;&nbsp;</h2>
+        <h2 class="skills-text">★★★★★</h2>
+      </div>
     </div>
   </body>
 </html>
