--- a/04/index.html
+++ b/04/index.html
@@ -56,7 +56,7 @@
           <p>
             <strong>Email: </strong
             ><a href="mailto:jorgesilveyra@muhlenberg.edu"
-              >jorgesilveyra@muhlenberg.edu</a
+              >bgoldstone@muhlenberg.edu</a
             >
           </p>
           <p>
