--- a/08/index.html
+++ b/08/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     <title>My Website</title>
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Hello</h1>
-    <input type="checkbox" class="cb"/>
+    <input type="checkbox" class="cb" />
     <button>Click me</button>
 
     <ul>
